[package]
name = "paisa2moneywallet"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
